# Practice_this_and_that

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  requirements.txt
orm_practice/: asgi.py  settings.py  urls.py  wsgi.py
users/: models.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_alter_user_address.py  0003_alter_user_retire_date.py
