[tool.poetry]
name = "orm-practice"
version = "0.1.0"
description = "this and that 테스트."
authors = ["금빈"]
readme = "README.md"
packages = [{include = "orm_practice"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.1.7"
djangorestframework = "^3.14.0"
makefile = "^1.1.0"
make = "^0.1.6.post2"
pre-commit = "^3.1.1"
isort = "^5.12.0"
mypy = "^1.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"